--- a/project/contact.html
+++ b/project/contact.html
@@ -2,13 +2,31 @@
 <html>
     <head>
         <title>Cntact US</title>
-        <link rel="stylesheet" href="2.css"/>
+        <link rel="stylesheet" href="1.css"/>
     </head>
-    <body>
-        <div >
-            <img src="logo1.jpg" height="150px" width="850px" >
-        </div>
+    <body class="a0">
         <div class="a1">
+            <div class="l1">
+                <img src="logo1.jpg" width="300px" height="300px"/> 
+            </div>
+            <div class="name">
+                <h1>FRESH SUPER MARKET</h1>
+            </div>
+            <div class="l2">
+                <img src="logo1.jpg"/ width="300px" height="300px"> 
+            </div>
+        
+         </div>
+         <nav >
+            <a href="marketproject.html">Home</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="resources.html">Resources</a>
+            <a href="about.html">About Us</a>
+            <div style="float: right;">
+            <a href="login.html">Login</a></div>
+            <a href="registration.html">Registration</a>
+           </nav>
+        <div class="a3">
         <h1>Contact US</h1>
        <p> SPAR INDIA (Max Hypermarkets India Pvt Ltd)</p>
        <p>No. 39/3 & 44, Bannerghatta Road</p>
