--- a/project/login.html
+++ b/project/login.html
@@ -16,11 +16,37 @@
                 }
             }
         </script>
+        <link rel="stylesheet" href="1.css"/>
     </head>
-    <body>
-        username:  <input type="text" id="username" /><br />
-        password: <input type="password" id="txtPassword" /><br />
+    <body class="a0">
+        <div class="a1">
+            <div class="l1">
+                <img src="logo1.jpg" width="300px" height="300px"/> 
+            </div>
+            <div class="name">
+                <h1>FRESH SUPER MARKET</h1>
+            </div>
+            <div class="l2">
+                <img src="logo1.jpg"/ width="300px" height="300px"> 
+            </div>
         
+         </div>
+         <nav >
+            <a href="marketproject.html">Home</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="resources.html">Resources</a>
+            <a href="about.html">About Us</a>
+            <div style="float: right;">
+            <a href="login.html">Login</a></div>
+            <a href="registration.html">Registration</a>
+           </nav>
+           <div class="a3">
+               <P>ENTER HERE</P>
+        <P>USER NAME AND Password</P>
+        <P>TO LOGIN "FRESH SUPER MARKET"</P>
+        username:  <input type="text" id="username" /><br /><br>
+        password: <input type="password" id="txtPassword" /><br /><br>
         <button type="button" onclick="passValidate()">PasswordValidation</button>
+   </div>
     </body>
 </html>
