--- a/project/marketproject.html
+++ b/project/marketproject.html
@@ -18,7 +18,7 @@
             </div>
         
          </div>
-         <nav >
+         <nav class="a7">
             <a href="marketproject.html">Home</a>
             <a href="contact.html">Contact Us</a>
             <a href="resources.html">Resources</a>
