--- a/project/registration.html
+++ b/project/registration.html
@@ -18,13 +18,14 @@
         </div>
     
      </div>
-     <nav >
+     <nav class="a7">
         <a href="marketproject.html">Home</a>
         <a href="contact.html">Contact Us</a>
         <a href="resources.html">Resources</a>
         <a href="about.html">About Us</a>
         <div style="float: right;">
         <a href="login.html">Login</a></div>
+        <a href="registration.html">Registration</a>
        </nav>
       <div class="a3">
         <form method="post" target="#" onsubmit="return validate()">
